--- a/data/styles.css
+++ b/data/styles.css
@@ -198,38 +198,37 @@ footer .wave {
 footer .titulo-seccion {
   color: #fff;
   padding-top: 120px;
+  margin-top: 70px;
 }
 
 .formulario {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  color: white;
 }
 
 input {
-  border: 1px solid white;
+  text-align: center;
+  width: 330px;
+  height: 25px;
   background: none;
-  font-size: 16px;
-  font-weight: 300px;
   outline: none;
-  padding: 20px 10px;
-  color: #fff;
+  border: 1px solid white;
+  color: white;
 }
 
-input[type="text"],
-input[type="email"] {
-  width: 48%;
-}
-
-.formulario textarea {
-  border: 1px solid white;
+textarea {
+  text-align: center;
+  max-width: 320px;
+  min-width: 330px;
+  max-height: 180px;
+  min-height: 180px;
+  padding: 10px 20px;
   background: none;
-  font-size: 16px;
-  font-weight: 300px;
-  max-width: 100%;
-  min-width: 100%;
-  min-height: 250px;
-  max-height: 350px;
   outline: none;
-  padding: 20px 10px;
+  border: 1px solid white;
+  color: white;
 }
